[package]
name = "navigatyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
arduino-cli-client = "0.1.2"
tokio =   { version = "1.12", features = ["full"] }