[package]
name = "navigatyr"
version = "0.2.0"
edition = "2021"
authors = ["Sidd Gupta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
arduino-cli-client = "0.1.2"
tokio =   { version = "1.29.0", features = ["full"] }
tokio-compat = "0.1.6"
config-file = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
home = "0.5.3"
toml = "0.5.8"
strum = "0.25"
strum_macros = "0.25.1"
yaml-rust = "0.4.5"
