[package]
name = "navigatyr"
version = "0.4.1"
edition = "2021"
authors = ["Sidd Gupta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio =   { version = "1.29.0", features = ["full"] }
tokio-compat = "0.1.6"
config-file = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
home = "0.5.3"
toml = "0.5.8"
strum = "0.25"
strum_macros = "0.25.1"
yaml-rust = "0.4.5"
log = "0.4.19"
env_logger = { version = "0.9.0", features = [] }
serde_json = "1.0.107"
